--- a/src/components/IncomingRequest.css
+++ b/src/components/IncomingRequest.css
@@ -1,9 +1,9 @@
 .IncomingRequest-wrapper{
   /* the width and the margin should be changed after all components are made */
-  max-width: 620px;
+  max-width: 350px;
   max-height: 240px;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
   padding: 20px;
   background: #F5F5F7;
   border-radius: 14px;
@@ -11,15 +11,24 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.info-container{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  }
 
 
-.euro-icon {
+
+.duck-icon {
 width: 20px;
+height: 20px;
 margin-right: 5px;
 }
 
 .fire-icon {
   width: 20px;
+  height: 20px;
+
   margin-right: 2px;
   }
 
@@ -62,7 +71,7 @@ font-size: 13px;
 }
 
 .IncomingRequest-description{
-  width: 80%;
+
   max-height:100px;
   word-wrap: break-word;
   overflow-y: scroll;
@@ -85,13 +94,15 @@ font-size: 13px;
 
 /* ########  BUTTONS  ########### */
 .buttons-container{
-  height: 60%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 25px;
  
 }
 .accept-button {
   font-size:15px;
   font-family:Verdana;
-width: 100px;
+width: 90px;
   height:40px;
   color:#fff;
   font-weight:bold;
@@ -109,7 +120,7 @@ width: 100px;
 .decline-button {
   font-size:15px;
   font-family:Verdana;
-width: 100px;
+width: 90px;
   height:40px;
   color:#fff;
   font-weight:bold;
@@ -122,4 +133,27 @@ width: 100px;
 
 .decline-button:hover {
 background: rgba(207, 47, 47, 0.8)
+}
+
+
+@media only screen and (max-width: 400px) {
+  .info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+    }
+
+    .IncomingRequest-wrapper{
+      /* the width and the margin should be changed after all components are made */
+      max-width: 350px;
+      max-height: 500px;
+    }
+
+    .buttons-container{
+    margin: 10px 0;
+      
+     
+    }
+    
 }
