--- a/src/components/ProfilePerformanceInfo.css
+++ b/src/components/ProfilePerformanceInfo.css
@@ -2,7 +2,7 @@
 .profilePerformanceInfo-wrapper{
   display: flex;
   flex-direction: column;
-  width: 400px;
+  max-width: 400px;
   margin: 50px;
   font-family: "Baloo Bhai"
   /* the margin and width above must be changed after all components are done */
@@ -30,18 +30,48 @@
   display: flex;
   width: 40%;
   justify-content: space-evenly;
+  flex-wrap: wrap;
+  min-width: fit-content;
+  margin-right: 10px;
 }
 
 .number{
- font-size: 3rem;
+ font-size: 2rem;
  display: flex;
  align-items: center;
 }
 
 .word{
-font-size: 1.5rem;
+font-size: 1.2rem;
 display: flex;
 align-items: center;
 font-family: 'Roboto', sans-serif!important;
 }
 
+@media only screen and (max-width: 400px) {
+  .stats-outer-container{
+    display: flex;
+    flex-direction: column;
+     justify-content: space-between;
+   }
+
+   .stats-inner-container{
+  margin-bottom: 5px;
+  padding: 5px;
+  }
+
+  .stats-outer-container{
+    margin-bottom: 20px;
+    }
+
+    .number{
+      font-size: 1.7rem;
+
+     }
+     
+     .word{
+     font-size: 1rem;
+ 
+     }
+    
+}
