--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Baloo+Bhai+2:wght@400;500;600;700;800&family=Josefin+Sans:wght@200;500;700&family=Poppins:wght@200;500;900&family=Tiro+Telugu&display=swap");
 @import url('//db.onlinewebfonts.com/c/dc16e79503324279aeea803fcb36ac99?family=Baloo+Bhai');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
