--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -1,6 +1,3 @@
-/* take import off once merge to new version (Mauricio already imported in index.css) */
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Baloo+Bhai+2:wght@400;500;600;700;800&family=Josefin+Sans:wght@200;500;700&family=Poppins:wght@200;500;900&family=Tiro+Telugu&display=swap");
-
 .profile-container {
   margin-left: 20%;
   margin-top: 1%;
@@ -22,9 +19,11 @@
 }
 
 #aboutme {
-  font-family: "Baloo Bhai 2", cursive;
+  font-family: "Roboto", sans-serif;
   font-size: 15px;
   margin-bottom: 5%;
+  margin-top: 2%;
+  width: 90%;
 }
 
 .label-profileForm {
@@ -35,10 +34,10 @@
 .profile-boxes {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 30vw;
   background-color: #f5f5f7;
-  margin-top: 3%;
-  padding: 3% 3% 3% 3%;
+  margin-top: 6vh;
+  padding: 4vh;
   border-radius: 20px;
 }
 
@@ -57,4 +56,44 @@
   display: flex;
   border-radius: 10px;
   padding: 1%;
+}
+
+.input-name {
+  display: flex;
+}
+
+#input-firstName,
+#input-lastName {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+#input-aboutme {
+  display: flex;
+  flex-direction: column;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  margin-top: 2%;
+  width: 90%;
+}
+
+.profile-input {
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  border-radius: 5px;
+  border-color: lightgray;
+}
+#profile-socialmedia {
+  width: 95%;
+  border-color: lightgrey, solid;
+  font-family: "Roboto", sans-serif;
+}
+
+#programminglanguage,
+#socialmedia,
+#speakinglanguage {
+  font-family: "Roboto", sans-serif;
 }
