--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Baloo+Bhai+2:wght@400;500;600;700;800&family=Josefin+Sans:wght@200;500;700&family=Poppins:wght@200;500;900&family=Tiro+Telugu&display=swap");
 
-@import url('//db.onlinewebfonts.com/c/dc16e79503324279aeea803fcb36ac99?family=Baloo+Bhai');
-
+@import url("//db.onlinewebfonts.com/c/dc16e79503324279aeea803fcb36ac99?family=Baloo+Bhai");
 
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Baloo+Bhai+2:wght@400;500;600;700;800&family=Josefin+Sans:wght@200;500;700&family=Poppins:wght@200;500;900&family=Roboto:wght@300;400;700&family=Tiro+Telugu&display=swap");
 * {
@@ -11,4 +10,8 @@
 body {
   margin: 0;
   padding: 0;
+}
+
+.app {
+  height: 100vh;
 }
