--- a/src/views/userLogIn/Register.css
+++ b/src/views/userLogIn/Register.css
@@ -1,11 +1,4 @@
 .register {
-  /* background-image: url("/Users/fernandarodrigues/Codeworks/HelperDuckClient/src/mocks/pexels-armando-are-3759364.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-size: 80%;
-  background-position: 100%; */
-  /* height: 100vh;
-  width: 100%; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,24 +9,24 @@
   top: -1475px;
   background: url("/Users/fernandarodrigues/Codeworks/HelperDuckClient/src/mocks/pexels-andre-moura-2764989.jpg");
   opacity: 0.75;
-  /* border: red solid;
-  background-color: #161620;
-  opacity: 85%; */
 }
 
 .register__container {
-  border: red solid;
+  position: relative;
   display: flex;
   flex-direction: column;
   text-align: center;
   background-color: #dcdcdc;
-  padding: 30px;
+  background-color: transparent;
+  margin-right: 40%;
 }
 
 .register__textBox {
   padding: 10px;
   font-size: 18px;
   margin-bottom: 10px;
+  border-radius: 20px;
+  border-color: transparent;
 }
 
 .register__btn {
@@ -41,6 +34,7 @@
   font-size: 18px;
   margin-bottom: 10px;
   border: none;
+  border-radius: 20px;
   color: white;
   background-color: black;
 }
