--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -1,6 +1,21 @@
+.profile-wrapper {
+  padding: 3%;
+}
+
 .profile-container {
-  margin-left: 20%;
-  margin-top: 1%;
+  margin-left: 12%;
+  max-height: 100vh;
+  position: relative;
+}
+
+.profile-display {
+  position: relative;
+}
+
+.profile-expertise {
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .profile-header {
@@ -31,24 +46,34 @@
   font-weight: 800;
 }
 
+.profile-boxes-wrapper {
+  position: relative;
+}
+
 .profile-boxes {
-  display: flex;
-  flex-direction: column;
-  width: 30vw;
+  width: 40vw;
   background-color: #f5f5f7;
-  margin-top: 6vh;
-  padding: 4vh;
+  margin-top: 3vh;
+  height: 12vh;
   border-radius: 20px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
 .wrapper-box {
   display: flex;
   justify-content: left;
   align-items: center;
+  position: absolute;
+  margin-left: 1%;
+  width: 40%;
+  position: absolute;
 }
 
 .box-info {
   margin-left: 5%;
+  position: relative;
 }
 
 .icons-box-profile-page {
