--- a/src/Pages/VideoCallPage.css
+++ b/src/Pages/VideoCallPage.css
@@ -6,6 +6,42 @@
   flex-direction: column;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+/* .videos-wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 100vh;
+  overflow: hidden;
+  
+} */
+
+/* .video-container {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+
+.user-2 {
+  display: none;
+}
+
+.smallFrame {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  height: 170px;
+  width: 300px;
+  border-radius: 2px;
+  z-index: 100;
+}
+
 /*wraps my video-container and video-controls*/
 .my-video-wrapper {
   display: flex;
@@ -36,17 +72,40 @@
   justify-content: center;
 }
 
-.cam-btn {
+.video-btn {
 border-radius: 20%;
 margin: 0.5em;
+width: 30px;
+height: 30px;
+  
+}
+
+.cam-btn {
+
 }
 
 .mic-btn {
-  border-radius: 20%;
-  margin: 0.5em;
+  
 }
 
 .phone-btn {
-  border-radius: 20%;
-  margin: 0.5em;
+  
+}
+
+.phone-btn {
+
+}
+
+
+
+@media screen and (max-width: 600px) {
+  .smallFrame {
+    height: 80px;
+    width: 120px;
+  }
+  
+  .video-controls {
+    height: 20px;
+    width: 20px;
+  }
 }
