--- a/src/Pages/DashboardPage.css
+++ b/src/Pages/DashboardPage.css
@@ -1,3 +1,71 @@
 .dashboard-wrapper{
-display: flex;
+padding: 1%;
+
+}
+
+.inner-wrapper{
+  display: flex;
+
+}
+
+.second-half-container, .first-half-container{
+  width: 50%;
+  padding: 2%;
+}
+
+.bottom-container{
+  padding: 2%;
+}
+
+.outer-wrapper{
+  margin-left: 8%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 1.5%;
+}
+
+.hello-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 50%;
+}
+
+.hello-wrapper{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #F5F5F7;
+
+  border-radius: 14px;
+  min-height: 160px;
+  flex-wrap: wrap;
+ 
+}
+
+.hello{
+  font-size: 36px;
+  font-family: "Baloo Bhai";
+  word-wrap: break-word;
+
+
+}
+
+.hello-msg{
+  font-size: 16px;
+  font-family: "Roboto"
+}
+
+.img-boy{
+
+  position: absolute;
+right:-50px;
+top:-100px;
+width: 160px;
+
+}
+.about-me-icon{
+ position: relative;
+ 
 }
