--- a/src/Pages/CreateRequestPage.css
+++ b/src/Pages/CreateRequestPage.css
@@ -1,23 +1,45 @@
 .request-container {
-  background: #232526;
-  background: -webkit-linear-gradient(to right, #232526, #414345);
-  background: linear-gradient(to right, #232526, #414345);
-  background-size: cover;
+  background-color: #232526;
+  background-color: -webkit-linear-gradient(to right, #232526, #414345);
+  background-color: linear-gradient(to right, #232526, #414345);
+  background-size: contain;
   background-repeat: no-repeat;
+  background-position: left 110% top 25%;
   height: 100vh;
-  overflow: hidden;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  background-image: url("https://www.ausolan.com/src/img/svg/ico/r_arrow.svg");
+  padding: 2.5%;
+}
+
+.table-request-form {
+  box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.3);
+  height: 65vh;
+  width: 60vw;
+  border-radius: 20px;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.table-request-form {
-  box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.3);
-  height: 65%;
-  width: 65%;
-  border-radius: 20px;
+.request-form {
+  width: 100%;
+  height: 95%;
   position: absolute;
 }
+
+.input-box-wrapper {
+  position: relative;
+}
+
+/* @media screen and (min-width: 720px) {
+  body {
+    background-color: lightgreen;
+  }
+} */
 
 .table-request-form:hover {
   transform: scale(1.05);
@@ -28,10 +50,7 @@
   flex-direction: column;
   padding-left: 1.5%;
   padding-right: 1.5%;
-}
-
-.request-form {
-  position: relative;
+  height: 40%;
 }
 
 h2 {
@@ -54,7 +73,7 @@ label {
 }
 
 .btn-request {
-  margin-top: 1vh;
+  margin-top: 3vh;
   margin-left: 1.5%;
   border-radius: 10px;
   width: 10%;
