--- a/src/components/DashUserInfo.css
+++ b/src/components/DashUserInfo.css
@@ -1,6 +1,6 @@
 /* WIDTHS AND MARGINS SHOULD BE CHANGED AFTER ALL COMPONETS ARE DONE */
 
-.dash-user-wrapper{
+.dash-user-wrapper {
   display: flex;
   flex-direction: column;
   font-family: "Baloo Bhai";
@@ -8,11 +8,11 @@
   /* widtch and mar should be changed after all componets are done */
 }
 
-.about-me-title{
+.about-me-title {
   font-size: 24px;
 }
 
-.about-me-description{
+.about-me-description {
   font-size: 16px;
   word-wrap: break-word;
   max-height: 140px;
@@ -26,6 +26,7 @@
   width: 3px;
   height: 3px;
 }
+
 .about-me-description::-webkit-scrollbar-track {
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.1);
@@ -37,80 +38,94 @@
 }
 
 
-.aboutme-outer-container{
+.aboutme-outer-container {
   max-height: 220px;
- 
+
 }
 
-.about-me-container{
-
+.about-me-container {
+  margin-right: 3%;
   max-width: 60%;
+  min-width: 50%;
 }
 
 
 
-.dash-user-wrapper{ 
+.dash-user-wrapper {
   margin-bottom: 10px;
 }
 
-.credits-taken-outer-container, .languages-outer-container, .aboutme-outer-container, .credits-container, .taken-container, .about-me-container{
+.credits-taken-outer-container,
+.languages-outer-container,
+.aboutme-outer-container,
+.credits-container,
+.taken-container,
+.about-me-container {
   display: flex;
 }
 
-.credits-taken-outer-container, .languages-outer-container, .aboutme-outer-container{
+.credits-taken-outer-container,
+.languages-outer-container,
+.aboutme-outer-container {
   margin-bottom: 15px;
 }
 
-.credits-container, .taken-container, .languages-inner-container, .aboutme-outer-container {
+.credits-container,
+.taken-container,
+.languages-inner-container,
+.aboutme-outer-container {
   background: #F5F5F7;
 }
 
-.about-me-container{
+.about-me-container {
   flex-direction: column;
 }
 
-.credits-taken-outer-container, .languages-outer-container{
-   justify-content: space-between;
- }
- 
- .languages-outer-container{
+.credits-taken-outer-container,
+.languages-outer-container {
+  justify-content: space-between;
+}
+
+.languages-outer-container {
   max-width: 100%;
 
- }
+}
 
- .languages-outer-container > *{
+.languages-outer-container>* {
   word-wrap: break-word;
   word-break: break-all;
- }
- 
- .credits-container, .taken-container{
+}
+
+.credits-container,
+.taken-container {
   display: flex;
   align-items: center;
   background: #F5F5F7;
   border-radius: 14px;
   width: 45%;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
   min-height: 80px;
   padding: 5px 10px;
- }
-
- .credits-container{
-  margin-right: 15px;
- }
-
-.taken-container > .number{
-  font-size: 40px;
-  margin-right: 5px;
-  }
-
-.credits-container > .number{
-font-size: 40px;
-margin-right: 5px;
 }
 
- .languages-inner-container, .expertise-inner-container{
+.credits-container {
+  margin-right: 15px;
+}
+
+.taken-container>.number {
+  font-size: 40px;
+  margin-right: 5px;
+}
+
+.credits-container>.number {
+  font-size: 40px;
+  margin-right: 5px;
+}
+
+.languages-inner-container,
+.expertise-inner-container {
   display: flex;
   align-items: center;
   background: #F5F5F7;
@@ -121,31 +136,33 @@ margin-right: 5px;
   padding: 5px 10px;
   flex-wrap: wrap;
   width: 45%;
- }
+}
 
- .languages-inner-container{
+.languages-inner-container {
   margin-right: 15px;
- }
- .languages-icon{
+}
+
+.languages-icon {
   background-color: white;
   border-radius: 14px;
   margin-right: 10px;
   max-width: 20%;
   min-width: 40px;
   min-height: 40px;
- }
+}
 
- .languages-list, .about-me-description {
-  font-family: 'Roboto', sans-serif!important;
+.languages-list,
+.about-me-description {
+  font-family: 'Roboto', sans-serif !important;
 
- }
+}
 
-.languages-title{
+.languages-title {
   font-size: 24px;
 
 }
 
-.languages-container{
+.languages-container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -154,9 +171,9 @@ margin-right: 5px;
 
 }
 
-.languages-container > *{
+.languages-container>* {
   word-wrap: break-word;
- 
+
 }
 
 .languages-container::-webkit-scrollbar {
@@ -164,28 +181,28 @@ margin-right: 5px;
 }
 
 .test {
-word-wrap: break-word;
+  word-wrap: break-word;
 
 
-  
+
 }
 
-.icon1{
+.icon1 {
   max-width: 60px;
   max-height: 60px;
   min-width: 40px;
   min-height: 40px;
-  
+
 }
 
-.aboutme-outer-container{
+.aboutme-outer-container {
   padding: 15px 0;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 
-.profile-setting-container{
+.profile-setting-container {
   overflow: hidden;
   height: 50px;
   width: 50px;
@@ -193,7 +210,7 @@ word-wrap: break-word;
 }
 
 
-.search-and-profile{
+.search-and-profile {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -230,7 +247,7 @@ word-wrap: break-word;
   border: 1px solid transparent;
   width: 100%;
   background: #F5F5F7;
-border-radius: 8px;
+  border-radius: 8px;
 }
 
 .search-input::placeholder {
@@ -259,5 +276,3 @@ border-radius: 8px;
   box-shadow: 0 0 3px 0 #1183d6;
   outline: none;
 }
-
-
