--- a/src/components/RequestHistory.css
+++ b/src/components/RequestHistory.css
@@ -2,29 +2,29 @@
 
 
 
-.RequestHistory-wrapper{
+.RequestHistory-wrapper {
   display: flex;
   justify-content: space-between;
   /* width and margin should be changed after all components are done */
 }
 
-.past-request-carrousel{
+.past-request-carrousel {
   max-height: 23vh;
   overflow-y: scroll;
 }
 
-.subject-user-container{
+.subject-user-container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   word-wrap: break-word;
 }
 
-.outer-container{
+.outer-container {
   width: 47.5%;
 }
 
-.title{
+.title {
   font-size: 24px;
   font-family: 'Baloo Bhai 2', cursive;
   font-weight: 800;
@@ -32,10 +32,10 @@
 
 }
 
-.past-request{
+.past-request {
   background: #F5F5F7;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   border-radius: 14px;
   min-height: 105px;
@@ -44,51 +44,52 @@
   margin: 5px;
 }
 
-.past-request div{
- margin-right: 15px;
+.past-request div {
+  margin-right: 15px;
 
 }
 
-.profile-pic-past-request{
+.profile-pic-past-request {
   width: 50px;
   border-radius: 12px;
 }
 
 
 
-.subject{
+.subject {
   word-wrap: break-word;
 }
-.tip{
+
+.tip {
   display: flex;
   align-content: flex-start;
 
 }
 
-.score{
+.score {
   display: flex;
   align-content: flex-start;
 
 }
 
 
-.detail-button-container{
+.detail-button-container {
   display: flex;
   align-items: center;
-  margin: 0!important;
- 
-  
+  margin: 0 !important;
+
+
 }
 
 .detail-btn {
-  font-size:13px;
-  font-family:Verdana;
+  font-size: 13px;
+  font-family: Verdana;
   width: 100px;
-  height:30px;
-  color:#fff;
-  font-weight:bold;
+  height: 30px;
+  color: #fff;
+  font-weight: bold;
   border-radius: 8px;
-  background:rgba(0, 0, 0, 1);
+  background: rgba(0, 0, 0, 1);
   cursor: pointer;
   border: none;
 }
@@ -98,15 +99,14 @@
 }
 
 
-@media only screen and (max-width: 960px) {
-
-}
+@media only screen and (max-width: 960px) {}
 
 
 .past-request-carrousel::-webkit-scrollbar {
   width: 3px;
   height: 3px;
 }
+
 .past-request-carrousel::-webkit-scrollbar-track {
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.1);
