--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -21,27 +21,36 @@
 }
 
 .profile-header {
-  /* display: flex;
-  align-items: center; */
+  display: flex;
+  align-items: center;
+  justify-content: left;
   font-family: "Baloo Bhai 2", cursive;
   font-weight: 800;
+  width: 100vh;
 }
 
 .header-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
 }
 
 .request-btn {
+  position: absolute;
   background-color: black;
   color: white;
-  height: 12vh;
-  width: 15vw;
+  height: 10vh;
+  width: 15%;
+  margin-left: 10%;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 5px -3px 10px rgb(75, 75, 75);
+  left: 65%;
+  font-family: "Baloo Bhai 2", cursive;
+  font-weight: 800;
+  font-size: 18px;
 }
 
 #full-name {
-  width: 100%;
+  width: 40vw;
   background-color: #f5f5f7;
   padding-left: 5%;
   padding-top: 1%;
@@ -157,8 +166,24 @@ input[type="file"] {
   position: absolute;
   left: 78%;
   top: 75%;
+  height: 15%;
+  width: 15%;
+  background-color: black;
+  padding: 2%;
+  border-radius: 30%;
 }
 
 .img-input {
   border-radius: 20px;
+}
+
+.btn-edit {
+  border: none;
+  background-color: transparent;
+  font-family: "Baloo Bhai 2", cursive;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 5px;
 }
