--- a/src/Pages/VideoCallPage.css
+++ b/src/Pages/VideoCallPage.css
@@ -4,6 +4,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(https://res.cloudinary.com/brnl/image/upload/v1656587693/HelperDuck/blob-scene-haikei_1_oxjync.svg);
 }
 
 * {
@@ -12,21 +16,6 @@
   box-sizing: border-box;
 }
 
-
-/* .videos-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  height: 100vh;
-  overflow: hidden;
-  
-} */
-
-/* .video-container {
-  background-color: black;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
 
 .user-2 {
   display: none;
@@ -42,11 +31,17 @@
   z-index: 100;
 }
 
+.peers-video {
+  min-height: 40vh;
+
+}
+
 /*wraps my video-container and video-controls*/
 .my-video-wrapper {
   display: flex;
   justify-content: center;
   flex-direction: column;
+
 }
 
 
@@ -73,29 +68,12 @@
 }
 
 .video-btn {
-border-radius: 20%;
-margin: 0.5em;
-width: 30px;
-height: 30px;
-  
-}
-
-.cam-btn {
+  border-radius: 20%;
+  margin: 0.5em;
+  width: 30px;
+  height: 30px;
 
 }
-
-.mic-btn {
-  
-}
-
-.phone-btn {
-  
-}
-
-.phone-btn {
-
-}
-
 
 
 @media screen and (max-width: 600px) {
@@ -103,7 +81,7 @@ height: 30px;
     height: 80px;
     width: 120px;
   }
-  
+
   .video-controls {
     height: 20px;
     width: 20px;
