--- a/src/components/IncomingRequestsCarrousel.css
+++ b/src/components/IncomingRequestsCarrousel.css
@@ -7,7 +7,7 @@
   display: flex;
   max-height: 24vh;
   min-height: 310px;
-  overflow-x: auto;
+  overflow-y: auto;
   width: 100%;
   flex-direction: column;
 
