--- a/src/components/RequestHistory.css
+++ b/src/components/RequestHistory.css
@@ -38,7 +38,7 @@
   justify-content: space-around;
   align-items: center;
   border-radius: 14px;
-  min-height: 105px;
+  min-height: 10.5vh;
   padding: 5px 10px;
   flex-wrap: wrap;
   margin: 0 1.5% 1.5% 1.5%;
