--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -16,6 +16,7 @@
   display: flex;
   position: relative;
 }
+
 .form-container {
   padding: 1.5%;
 }
@@ -55,7 +56,7 @@
   padding-left: 5%;
   padding-top: 1%;
   padding-bottom: 1%;
-  font-size: 25px;
+  font-size: 2rem;
 }
 
 #aboutme {
@@ -78,7 +79,7 @@
 }
 
 .profile-boxes {
-  width: 40vw;
+  width: 50vw;
   background-color: #f5f5f7;
   margin-top: 3vh;
   height: 12vh;
@@ -92,10 +93,10 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  position: absolute;
+
   margin-left: 1%;
   width: 100%;
-  position: absolute;
+
   flex-wrap: wrap;
 }
 
@@ -103,6 +104,15 @@
   margin-left: 5%;
   position: relative;
   font-family: "Roboto", sans-serif;
+  height: 13vh;
+  overflow-y: auto;
+  padding: 1%;
+  width: 60%;
+
+}
+
+.select-input {
+  width: 70% !important;
 }
 
 .icons-box-profile-page {
@@ -140,6 +150,7 @@
   border-radius: 5px;
   border-color: lightgray;
 }
+
 #profile-socialmedia {
   width: 95%;
   border-color: lightgrey, solid;
@@ -197,4 +208,19 @@ input[type="file"] {
   align-items: center;
   justify-content: space-between;
   padding-bottom: 5px;
+}
+
+.box-info::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+.box-info::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.box-info::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
 }
