--- a/src/components/DashUserInfo.css
+++ b/src/components/DashUserInfo.css
@@ -10,13 +10,13 @@
 }
 
 .about-me-title {
-  font-size: 24px;
+  font-size: 1.6rem;
 }
 
 .about-me-description {
-  font-size: 16px;
+  font-size: 1rem;
   word-wrap: break-word;
-  max-height: 140px;
+  max-height: 14vh;
   overflow-y: auto;
 
 }
@@ -40,7 +40,7 @@
 
 
 .aboutme-outer-container {
-  max-height: 220px;
+  max-height: 22vh;
   border-radius: 14px;
 
 
@@ -54,9 +54,7 @@
 
 
 
-.dash-user-wrapper {
-  margin-bottom: 10px;
-}
+
 
 .credits-taken-outer-container,
 .languages-outer-container,
@@ -68,8 +66,7 @@
 }
 
 .credits-taken-outer-container,
-.languages-outer-container,
-.aboutme-outer-container {
+.languages-outer-container {
   margin-bottom: 4%;
 }
 
@@ -109,7 +106,7 @@
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
-  min-height: 80px;
+  min-height: 8vh;
   padding: 5px 10px;
 }
 
@@ -118,12 +115,12 @@
 }
 
 .taken-container>.number {
-  font-size: 40px;
+  font-size: 2.5rem;
   margin-right: 5px;
 }
 
 .credits-container>.number {
-  font-size: 40px;
+  font-size: 2.5rem;
   margin-right: 5px;
 }
 
@@ -186,8 +183,29 @@
   display: none;
 }
 
+/* .test::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+.test::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.test::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+} */
+
+.test::-webkit-scrollbar {
+  display: none;
+}
+
 .test {
   word-wrap: break-word;
+  overflow-y: auto;
+  max-height: 10vh;
 
 
 
@@ -220,8 +238,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 0 10%;
-  height: 50px;
+  margin: 0 0 2%;
+  height: 5vh;
 }
 
 /* ################### SEARCH BAR ############ */
@@ -248,7 +266,7 @@
   background: transparent;
   margin: 0;
   padding: 7px 8px;
-  font-size: 14px;
+  font-size: 1rem;
   color: inherit;
   border: 1px solid transparent;
   width: 100%;
