--- a/src/components/IncomingRequestsCarrousel.css
+++ b/src/components/IncomingRequestsCarrousel.css
@@ -6,7 +6,7 @@
 
   display: flex;
   max-height: 24vh;
-  min-height: 310px;
+  min-height: 31vh;
   overflow-y: auto;
   width: 100%;
   flex-direction: column;
