--- a/src/Pages/CreateRequestPage.css
+++ b/src/Pages/CreateRequestPage.css
@@ -16,7 +16,6 @@
   align-items: center;
   justify-content: center;
   padding: 1%;
-
 }
 
 .brack {
@@ -29,7 +28,6 @@
   display: flex;
   margin-left: 1%;
   justify-content: flex-end;
-
 }
 
 .angle-brack1 {
@@ -40,7 +38,6 @@
   justify-content: flex-start;
 }
 
-
 .table-request-form {
   box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.3);
   height: 65vh;
@@ -50,10 +47,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #F5F5F7;
+  background-color: #f5f5f7;
 }
-
-
 
 .request-form {
   width: 100%;
@@ -62,9 +57,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
-
 }
-
 
 .input-box-wrapper {
   display: flex;
@@ -74,15 +67,12 @@
   height: 80%;
 }
 
-
-
 .input-request-box {
   display: flex;
   flex-direction: column;
 
   height: 40%;
   padding: 0 1.5%;
-
 }
 
 .create-title {
@@ -93,7 +83,6 @@
 }
 
 label {
-
   font-family: "Baloo Bhai 2", cursive;
   margin-top: 1%;
 }
@@ -105,7 +94,6 @@ label {
 }
 
 .btn-request {
-
   width: 18%;
   padding: 10px;
   font-size: 18px;
