--- a/src/components/DashUserInfo.css
+++ b/src/components/DashUserInfo.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   font-family: "Baloo Bhai";
 
-
   /* widtch and mar should be changed after all componets are done */
 }
 
@@ -18,10 +17,7 @@
   word-wrap: break-word;
   max-height: 140px;
   overflow-y: auto;
-
 }
-
-
 
 .about-me-description::-webkit-scrollbar {
   width: 3px;
@@ -38,12 +34,9 @@
   background: rgba(0, 0, 0, 0.2);
 }
 
-
 .aboutme-outer-container {
   max-height: 220px;
   border-radius: 14px;
-
-
 }
 
 .about-me-container {
@@ -51,8 +44,6 @@
   max-width: 60%;
   min-width: 50%;
 }
-
-
 
 .dash-user-wrapper {
   margin-bottom: 10px;
@@ -77,7 +68,7 @@
 .taken-container,
 .languages-inner-container,
 .aboutme-outer-container {
-  background: #F5F5F7;
+  background: #f5f5f7;
 }
 
 .about-me-container {
@@ -91,10 +82,9 @@
 
 .languages-outer-container {
   max-width: 100%;
-
 }
 
-.languages-outer-container>* {
+.languages-outer-container > * {
   word-wrap: break-word;
   word-break: break-all;
 }
@@ -103,7 +93,7 @@
 .taken-container {
   display: flex;
   align-items: center;
-  background: #F5F5F7;
+  background: #f5f5f7;
   border-radius: 14px;
   width: 45%;
   justify-content: space-around;
@@ -117,12 +107,12 @@
   margin-right: 15px;
 }
 
-.taken-container>.number {
+.taken-container > .number {
   font-size: 40px;
   margin-right: 5px;
 }
 
-.credits-container>.number {
+.credits-container > .number {
   font-size: 40px;
   margin-right: 5px;
 }
@@ -131,7 +121,7 @@
 .expertise-inner-container {
   display: flex;
   align-items: center;
-  background: #F5F5F7;
+  background: #f5f5f7;
   border-radius: 14px;
   justify-content: space-around;
   align-items: center;
@@ -159,13 +149,11 @@
 
 .languages-list,
 .about-me-description {
-  font-family: 'Roboto', sans-serif !important;
-
+  font-family: "Roboto", sans-serif !important;
 }
 
 .languages-title {
   font-size: 24px;
-
 }
 
 .languages-container {
@@ -174,12 +162,10 @@
   flex-wrap: wrap;
   overflow: scroll;
   word-wrap: break-word;
-
 }
 
-.languages-container>* {
+.languages-container > * {
   word-wrap: break-word;
-
 }
 
 .languages-container::-webkit-scrollbar {
@@ -188,9 +174,6 @@
 
 .test {
   word-wrap: break-word;
-
-
-
 }
 
 .icon1 {
@@ -198,7 +181,6 @@
   max-height: 60px;
   min-width: 40px;
   min-height: 40px;
-
 }
 
 .aboutme-outer-container {
@@ -215,7 +197,6 @@
   margin-right: 2%;
 }
 
-
 .search-and-profile {
   display: flex;
   justify-content: space-between;
@@ -226,21 +207,18 @@
 
 /* ################### SEARCH BAR ############ */
 
-
 .search-container {
   width: 70%;
-  background: #F5F5F7;
+  background: #f5f5f7;
   height: 40px;
   border-radius: 8px;
 }
-
 
 .search-form {
   color: #555;
   display: flex;
   padding: 2px;
   border-radius: 8px;
-
 }
 
 .search-input {
@@ -252,7 +230,7 @@
   color: inherit;
   border: 1px solid transparent;
   width: 100%;
-  background: #F5F5F7;
+  background: #f5f5f7;
   border-radius: 8px;
 }
 
@@ -268,7 +246,8 @@
   margin: 0;
   border: 1px solid transparent;
   border-radius: inherit;
-  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
+    no-repeat center;
   cursor: pointer;
   opacity: 0.7;
 }
