--- a/src/components/IncomingRequest.css
+++ b/src/components/IncomingRequest.css
@@ -1,10 +1,19 @@
+/*background: #f5f5f7;*/
+
 .IncomingRequest-wrapper {
   /* the width and the margin should be changed after all components are made */
   margin: 1% 0;
   display: flex;
   flex-direction: column;
   padding: 3%;
-  background: #f5f5f7;
+  background-color: rgba(245, 245, 247, 1);
+  box-shadow:  0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21), 
+   1.8px -0.1px 2px -0.2px rgba(0, 0, 0, 0.12), 
+   2.2px -2.1px 5px -0.5px rgba(219, 213, 213, 0.25), 
+   2.3px -0.25px 5px -0.2px rgba(43, 43, 43, 0), 
+   2.4px -1px 5px -0.3px rgba(255, 246, 246, 0.09),
+   2.4px 2px 5px -0.3px rgba(255, 246, 246, 0.908);
+
   border-radius: 14px;
   font-family: "Roboto", sans-serif;
   margin-right: 1%;
