css: profilepicshover transformation

--- a/src/components/SinglePastRequest.css
+++ b/src/components/SinglePastRequest.css
@@ -89,3 +89,8 @@
   transform: scale(1.2);
   cursor: pointer;
 }
+
+.profile-pic-past-request:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
