--- a/src/Pages/VideoCallPage.css
+++ b/src/Pages/VideoCallPage.css
@@ -9,7 +9,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(https://res.cloudinary.com/brnl/image/upload/v1656587693/HelperDuck/blob-scene-haikei_1_oxjync.svg);
