ProfilePage: acessibility /missing pointer cursors

--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -218,6 +218,7 @@ input[type="file"] {
   align-items: center;
   justify-content: space-between;
   padding-bottom: 5px;
+  cursor: pointer;
 }
 
 .btn-submit-edit {
